node name as parameter

--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 <script>
- log('entering nodename...');
   var parameters = location.search.substring(1).split("&");
-log('params...');
-    var temp = parameters[0].split("=");
-log('temp...');
-    nodename = unescape(temp[1]);
-   document.getElementById("p6").innerHTML = nodename;
+  document.getElementById("p6").innerHTML = parameters[0];
+ // var temp = parameters[0].split("=");
+ //  nodename = unescape(temp[1]);
+ //  document.getElementById("p6").innerHTML = nodename;
 </script>
 
 
@@ -127,13 +125,13 @@ log('temp...');
   <tr>
     <td><p id="p5" style="font-family: 'Titillium Web', monospace; font-size:10px;">Event Log</p></td>
 	<td><p id="p4" style="font-family: 'Titillium Web', monospace; font-size:10px;">Msgs</p></td>
-	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">Nodetsu</p></td>
+	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">Nuudel</p></td>
   </tr>
 </table> 
 
 		
 <h3 style="display:none;>Live output</h3>
-<div id="output" class="output">
+<div id="output" class="output" style="display:none;>
   <div id="content"></div>
   <div id="status"></div>
   <pre id="log"></pre>
