--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:16px;">
+  <body style="font-family: 'Titillium Web', monospace; font-size:18px;">
 
     <h2>WebBT / TinyNode Demo</h2>
 
@@ -78,10 +78,9 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <script>
   var parameters = location.search.substring(1).split("&");
-  document.getElementById("p6").innerHTML = parameters[0];
- // var temp = parameters[0].split("=");
- //  nodename = unescape(temp[1]);
- //  document.getElementById("p6").innerHTML = nodename;
+  var temp = parameters[0].split("=");
+   nodename = unescape(temp[1]);
+   document.getElementById("p6").innerHTML = nodename;
 </script>
 
 <script>
