--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p>
  <table style="width:100%">
   <tr>
-    <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure <p id="p6"></p></button></td>
+    <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure <br id="p6"></br></button></td>
     <td style="width:50%"><input style="height:50px;width:100%" id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true" /></td>
   </tr>
 </table> 
@@ -125,7 +125,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   <tr>
     <td><p id="p5" style="font-family: 'Titillium Web', monospace; font-size:10px;">Event Log</p></td>
 	<td><p id="p4" style="font-family: 'Titillium Web', monospace; font-size:10px;">Msgs</p></td>
-	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">Nuudel</p></td>
+	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;"></p></td>
   </tr>
 </table> 
 
