--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p>
  <table style="width:100%">
   <tr>
-    <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure <br id="p6"></br></button></td>
+    <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure <p id="p6"></p></button></td>
     <td style="width:50%"><input style="height:50px;width:100%" id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true" /></td>
   </tr>
 </table> 
