node name as parameter

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p>
  <table style="width:100%">
   <tr>
-    <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure <p id="p6"></p></button></td>
+    <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure <p id="p7"></p></button></td>
     <td style="width:50%"><input style="height:50px;width:100%" id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true" /></td>
   </tr>
 </table> 
@@ -129,6 +129,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   var temp = parameters[0].split("=");
    nodename = unescape(temp[1]);
    document.getElementById("p6").innerHTML = nodename;
+   document.getElementById("p7").innerHTML = nodename;
 </script>
 		
 <h3 style="display:none;>Live output</h3>
