node name as parameter

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 
 
-<p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p><p id="p7"></p>
+<p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode <p id="p7"></p></p>
  <table style="width:100%">
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure</button></td>
