node name as parameter

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 
 
-<p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode <a id="p7" style="font-weight:600"><a>.</p>
+<p>Ready to read data from VTT TinyNode <a id="p7" style="font-weight:600"><a>.</p>
  <table style="width:100%">
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">Connect + Measure</button></td>
@@ -123,6 +123,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">n</p></td>
   </tr>
 </table> 
+
+<p>This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
 
 <script>
   var parameters = location.search.substring(1).split("&");
