--- a/index.html
+++ b/index.html
@@ -120,17 +120,15 @@ Copyright 2017 Google Inc. All Rights Reserved.
   <tr>
     <td><p id="p5" style="font-family: 'Titillium Web', monospace; font-size:10px;">Event Log</p></td>
 	<td><p id="p4" style="font-family: 'Titillium Web', monospace; font-size:10px;">Msgs</p></td>
-	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">n</p></td>
   </tr>
 </table> 
 
-<p>This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
+<p style="font-family: 'Titillium Web', monospace; font-size:10px;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
 
 <script>
   var parameters = location.search.substring(1).split("&");
   var temp = parameters[0].split("=");
    nodename = unescape(temp[1]);
-   document.getElementById("p6").innerHTML = nodename;
    document.getElementById("p7").innerHTML = nodename;
 </script>
 		
