node name as parameter

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   <tr>
     <td><p id="p5" style="font-family: 'Titillium Web', monospace; font-size:10px;">Event Log</p></td>
 	<td><p id="p4" style="font-family: 'Titillium Web', monospace; font-size:10px;">Msgs</p></td>
-	<td><p id="p9" style="font-family: 'Titillium Web', monospace; font-size:10px;"></p></td>
+	<td><p id="p9" style="font-family: 'Titillium Web', monospace; font-size:10px;">nn</p></td>
   </tr>
 </table> 
 
