--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ function onButtonClick() {
   document.getElementById("p9").innerHTML = nodename;
   navigator.bluetooth.requestDevice(
 	//{filters: anyNamedDevice(), optionalServices: ['00001523-1212-efde-1523-785feabcd123']})
-    {filters: {name: nodename}, optionalServices: ['00001523-1212-efde-1523-785feabcd123']})
+    {filters: [{name: nodename}], optionalServices: ['00001523-1212-efde-1523-785feabcd123']})
 //{name: 'ExampleName'}
   .then(device => {
 	bluetoothDevice = device;
