node name as parameter

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<canvas id="env_chart" width="345" height="200"></canvas>
+<canvas id="env_chart" width="100%" height="200"></canvas>
 
  <table style="width:100%">
   <tr>
@@ -123,7 +123,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<p style="font-family: 'Titillium Web'; font-size:10px; font-weight:500;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
+<p style="font-family: 'Titillium Web'; font-size:10px; font-weight:600;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
 
 <script>
   var parameters = location.search.substring(1).split("&");
