node name as parameter

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<canvas id="env_chart" width="100%" height="200"></canvas>
+<canvas id="env_chart" width="100%" height="200px"></canvas>
 
  <table style="width:100%">
   <tr>
