--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
             canvas = document.getElementById("env_chart");
             if (canvas.width  < window.innerWidth)
             {
-                canvas.width  = window.innerWidth;
+                canvas.width  = window.innerWidth - 10;
             }
 
         }
@@ -122,7 +122,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<canvas id="env_chart" width="100%" height="200px"></canvas>
+<canvas id="env_chart" width="345" height="200"></canvas>
 
  <table style="width:100%">
   <tr>
