node name as parameter

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@ Copyright 2017 Google Inc. All Rights Reserved.
             canvas = document.getElementById("env_chart");
             if (canvas.width  < window.innerWidth)
             {
-                canvas.width  = window.innerWidth - 10;
+                canvas.width  = window.innerWidth;
             }
+            if (canvas.width  > window.innerWidth)
+            {
+                canvas.width  = window.innerWidth;
+            }
+
 
         }
     </script>
@@ -44,7 +49,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body onresize="resize_canvas()" style="font-family: 'Titillium Web', monospace; font-size:18px;">
+  <body onresize="resize_canvas()" style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
     <h2>WebBT / TinyNode Demo</h2>
 
