node name as parameter

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ Copyright 2017 Google Inc. All Rights Reserved.
             canvas = document.getElementById("env_chart");
             if (canvas.width  < window.innerWidth)
             {
-                canvas.width  = window.innerWidth;
+                canvas.width  = 800;
             }
             if (canvas.width  > window.innerWidth)
             {
-                canvas.width  = window.innerWidth;
+                canvas.width  = 345;
             }
 
 
