node name as parameter

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ function handleCharacteristicValueChanged(event) {
 	case 'p2':  ts.append(new Date().getTime(), tempdata);
 		break;
 	case 'p3':  ts.append(new Date().getTime(), humidata);
+				document.getElementById("p3").style.backgroundColor = "lightblue"; 
 		break;
 		
 		
