--- a/index.html
+++ b/index.html
@@ -333,17 +333,17 @@ function handleCharacteristicValueChanged(event) {
    {
 	case 'p1':  ts.append(new Date().getTime(), presdata);	
 				document.getElementById("p1").style.backgroundColor = "lightblue"; 
-				document.getElementById("p2").style.backgroundColor = "none"; 
-				document.getElementById("p3").style.backgroundColor = "none"; 
+				document.getElementById("p2").style.backgroundColor = "transparent"; 
+				document.getElementById("p3").style.backgroundColor = "transparent"; 
 		break;
 	case 'p2':  ts.append(new Date().getTime(), tempdata);
-				document.getElementById("p1").style.backgroundColor = "none"; 
+				document.getElementById("p1").style.backgroundColor = "transparent"; 
 				document.getElementById("p2").style.backgroundColor = "lightblue"; 
-				document.getElementById("p3").style.backgroundColor = "none"; 
+				document.getElementById("p3").style.backgroundColor = "transparent"; 
 		break;
 	case 'p3':  ts.append(new Date().getTime(), humidata);
-				document.getElementById("p1").style.backgroundColor = "none"; 
-				document.getElementById("p2").style.backgroundColor = "none"; 
+				document.getElementById("p1").style.backgroundColor = "transparent"; 
+				document.getElementById("p2").style.backgroundColor = "transparent"; 
 				document.getElementById("p3").style.backgroundColor = "lightblue"; 
 		break;
 		
