node name as parameter

--- a/index.html
+++ b/index.html
@@ -333,18 +333,18 @@ function handleCharacteristicValueChanged(event) {
    {
 	case 'p1':  ts.append(new Date().getTime(), presdata);	
 				document.getElementById("p1").style.borderBottom = "thick solid #33ff33"; 
-				document.getElementById("p2").style.backgroundColor = "transparent"; 
-				document.getElementById("p3").style.backgroundColor = "transparent"; 
+				document.getElementById("p2").style.borderBottom = "transparent"; 
+				document.getElementById("p3").style.borderBottom = "transparent"; 
 		break;
 	case 'p2':  ts.append(new Date().getTime(), tempdata);
-				document.getElementById("p1").style.backgroundColor = "transparent"; 
-				document.getElementById("p2").style.backgroundColor = "lightblue"; 
-				document.getElementById("p3").style.backgroundColor = "transparent"; 
+				document.getElementById("p1").style.borderBottom = "transparent"; 
+				document.getElementById("p2").style.borderBottom = "thick solid #33ff33";
+				document.getElementById("p3").style.borderBottom = "transparent"; 
 		break;
 	case 'p3':  ts.append(new Date().getTime(), humidata);
-				document.getElementById("p1").style.backgroundColor = "transparent"; 
-				document.getElementById("p2").style.backgroundColor = "transparent"; 
-				document.getElementById("p3").style.backgroundColor = "lightblue"; 
+				document.getElementById("p1").style.borderBottom = "transparent"; 
+				document.getElementById("p2").style.borderBottom = "transparent"; 
+				document.getElementById("p3").style.borderBottom = "thick solid #33ff33";
 		break;
 		
 		
