node name as parameter

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
  <table style="width:100%; text-align: center;">
   <tr>
-    <td><p id="p1">P:</p></td>
-    <td><p id="p2">T:</p></td>
-    <td><p id="p3">H:</p></td>
+    <td><p id="p1" onselectstart="return false">P:</p></td>
+    <td><p id="p2" onselectstart="return false">T:</p></td>
+    <td><p id="p3" onselectstart="return false">H:</p></td>
   </tr>
 </table> 
 
