node name as parameter

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body onresize="resize_canvas()" style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
+  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
     <h2>WebBT / TinyNode Demo</h2>
 
@@ -127,12 +127,12 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<canvas id="env_chart" width="345" height="200"></canvas>
+<canvas id="env_chart" width="345" height="200" style="display: block; margin: 0 auto;"></canvas>
 
- <table style="width:100%; text-align: center;">
+ <table style="width:100%;">
   <tr>
-    <td><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Event Log</p></td>
-	<td><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Msgs</p></td>
+    <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Event Log</p></td>
+	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Msgs</p></td>
   </tr>
 </table> 
 
