node name as parameter

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <canvas id="env_chart" width="340" height="200" style="display: block; margin: 0 auto;"></canvas>
 
- <table width="340">
+ <table width="340" align="center">
   <tr>
     <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Event Log</p></td>
 	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Msgs</p></td>
