--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   };
 </script>
 
- <table style="width:100%; text-align: center;">
+ <table style="width:100%; text-align: center; font-weight:600;">
   <tr>
     <td><p id="p1" onselectstart="return false">P:</p></td>
     <td><p id="p2" onselectstart="return false">T:</p></td>
@@ -111,7 +111,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<canvas id="env_chart" width="340" height="200" style="display: block; margin: 0 auto;"></canvas>
+<canvas id="env_chart" width="340" height="200" border="1px" style="display: block; margin: 0 auto;"></canvas>
 
  <table width="340" align="center">
   <tr>
@@ -216,7 +216,7 @@ function onButtonClick() {
 		})
 		.then(_ => {
 		 //log('Measurement ON!');
-		document.getElementById("p5").innerHTML = "Measurement started.";
+		document.getElementById("p5").innerHTML = "Measurement started...";
 		document.getElementById("connect").disabled = true;
 		document.getElementById("disconnect").disabled = false;
         chart.addTimeSeries(ts, { strokeStyle: 'rgba(0, 255, 0, 1)', lineWidth: 3 });
