node name as parameter

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
  <table width="340" align="center">
   <tr>
-    <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Event Log</p></td>
-	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Msgs</p></td>
+    <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Ready for connection...</p></td>
+	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: 0</p></td>
   </tr>
 </table> 
 
@@ -311,7 +311,7 @@ function handleCharacteristicValueChanged(event) {
   document.getElementById("p1").innerHTML = "P: " + presdata + "kPa";
   document.getElementById("p2").innerHTML = "T: " + tempdata + "\u00B0" + "C";
   document.getElementById("p3").innerHTML = "H: " + humidata + "%";
-  document.getElementById("p4").innerHTML = "Msgs: " + msgcounter;
+  document.getElementById("p4").innerHTML = "Messages: " + msgcounter;
   
   switch (dataToStream)
    {
