node name as parameter

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<canvas id="env_chart" width="340" height="200" border="1px" style="display: block; margin: 0 auto;"></canvas>
+<canvas id="env_chart" width="340" height="200" style="display: block; margin: 0 auto; border:1px solid #000000;"></canvas>
 
  <table width="340" align="center">
   <tr>
