node name as parameter

--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <script>
   var parameters = location.search.substring(1).split("&");
   if (parameters != ""){
-	document.getElementById("p4").innerHTML = "ei-tyhjä:" + parameters;
 	  var temp = parameters[0].split("=");
 	  var nodename = unescape(temp[1]);
 	  document.getElementById("p7").innerHTML = " " + nodename;
@@ -229,7 +228,7 @@ function onButtonClick() {
 		document.getElementById("disconnect").disabled = false;
         chart.addTimeSeries(ts, { strokeStyle: 'rgba(0, 255, 0, 1)', lineWidth: 3 });
         chart.streamTo(document.getElementById("env_chart"), 2000);
-		document.getElementById("p7").innerHTML = " " + nodename;
+		document.getElementById("p7").innerHTML = " " + bluetoothDevice.name;
 		})
 		
   .catch(error => {
