--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@ function getUsbVendorName(value) {
 function getDeviceName() {
 
 	if (nodename != '' && nodename != 'undefined'){
-		document.getElementById("p4").innerHTML = "1";
-		return '[{name: ' + nodename + '}]';
+		document.getElementById("p4").innerHTML = "dev " + nodename;
+		return "[{name: " + nodename + "}]";
 	}else{
 		document.getElementById("p4").innerHTML = "2";
 		return Array.from('0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ')
