--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ function getDeviceName() {
 
 	if (nodename != '' && nodename != 'undefined'){
 		document.getElementById("p4").innerHTML = "dev " + nodename;
-		return "[{name: " + nodename + "}]";
+		return "{name: '" + nodename + "'}";
 	}else{
 		document.getElementById("p4").innerHTML = "2";
 		return Array.from('0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ')
