node name as parameter

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ function getUsbVendorName(value) {
 function getDeviceName() {
 
 	if (nodename != '' && nodename != 'undefined'){
-		document.getElementById("p4").innerHTML = "dev " + nodename;
+		document.getElementById("p4").innerHTML = "dööv " + nodename;
 		return "{name: '" + nodename + "'}";
 	}else{
 		document.getElementById("p4").innerHTML = "2";
