node name as parameter

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 
 
-<p>Connect and read data from VTT TinyNode<a id="p7" style="font-weight:600"><a>.</p>
+<p>Connect and read data from VTT TinyNode<a id="p7" style="font-weight:600; color:#33ff33;"><a>.</p>
  <table style="width:100%">
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">CONNECT</button></td>
