--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
+  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px" onload="document.getElementById('connect').click()">
 
     <h2>WebBT / TinyNode Demo</h2>
 
