--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px" onload="document.getElementById('connect').click()">
+  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px" >
 
     <h2>WebBT / TinyNode Demo</h2>
 
@@ -132,6 +132,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 	nodename = "";
 	document.getElementById("p7").innerHTML = "";
 }
+$('#connect').click();
 </script>
 		
 <h3 style="display:none;>Live output</h3>
