--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
  <table width="340" align="center">
   <tr>
     <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Ready for connection...</p></td>
-	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: 0</p></td>
+	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: x</p></td>
   </tr>
 </table> 
 
