--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p style="font-family: 'Titillium Web'; font-size:10px; font-weight:600; text-align: center;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
 
 <script>
-$(function () {
   var parameters = location.search.substring(1).split("&");
   if (parameters != ""){
 	  var temp = parameters[0].split("=");
@@ -133,9 +132,6 @@ $(function () {
 	nodename = "";
 	document.getElementById("p7").innerHTML = "";
 }
-$('#connect').click();
-});
-
 </script>
 		
 <h3 style="display:none;>Live output</h3>
@@ -156,7 +152,11 @@ $('#connect').click();
   }
 </script>
 
-
+<script>
+$(document).ready(function() {
+   $("#connect").trigger('click');
+});
+</script>
 
     
 <script>
