--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px" >
+  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px" onload="autoconnect()">
 
     <h2>WebBT / TinyNode Demo</h2>
 
@@ -116,7 +116,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
  <table width="340" align="center">
   <tr>
     <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Ready for connection...</p></td>
-	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: x</p></td>
+	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: 0</p></td>
   </tr>
 </table> 
 
@@ -152,10 +152,11 @@ Copyright 2017 Google Inc. All Rights Reserved.
   }
 </script>
 
-<script>
-$(document).ready(function() {
-   $("#connect").trigger('click');
-});
+<script type="text/javascript">
+    function autoconnect()
+    {
+        document.getElementById("connect").click(); // Simulates button click
+    }
 </script>
 
     
